--- a/i18n/en/angular-surveys.json
+++ b/i18n/en/angular-surveys.json
@@ -143,7 +143,8 @@
             "userAnswer": "User answer",
             "buttons":{
                 "addOption":"Click to add option",
-                "addOther":"Add 'Other'"
+                "addOther":"Add 'Other'",
+                "rightAnswer":"Right Answer"
             }
 
         },
